# libjson-rpc-cpp

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  appveyor.yml
.circleci/: config.yml
docker/: ArchLinux.Dockerfile  Debian10.Dockerfile  Debian9.Dockerfile  Fedora.Dockerfile  Makefile  Ubuntu1604.Dockerfile  Ubuntu1804.Dockerfile  build_test_install.sh  install_debs.sh
src/: constants.h  exception.h
src/client/: CMakeLists.txt  batchcall.cpp  batchcall.h  batchresponse.cpp  batchresponse.h  client.cpp  client.h  client_test.cpp
src/connector/: CMakeLists.txt  abstractserverconnector.h  abstractserverconnector_test.cpp  iclientconnectionhandler.h  testclientconnectionhandler.h
src/connector/curl/: CMakeLists.txt  curlclient.cpp  curlclient.h  curlclient_test.cpp
src/connector/microhttpd/: CMakeLists.txt  httpserver.cpp  httpserver.h  microhttpserver.cpp  microhttpserver.h  microhttpserver_test.cpp
src/jsonrpccpp/common/: exception.h
src/jsonrpccpp/connector/: abstractserverconnector.h  iclientconnectionhandler.h
src/jsonrpccpp/connector/microhttpd/: CMakeLists.txt  httpserver.cpp  httpserver.h  httpserver_test.cpp  microhttpserver.cpp  microhttpserver.h  microhttpserver_test.cpp  mockclientconnectionhandler.cpp  mockclientconnectionhandler.h
src/jsonrpccpp/server/: abstractthreadedserver.cpp
src/test/: CMakeLists.txt  TestClientConnectionHandler.h
